--- a/printer.cfg
+++ b/printer.cfg
@@ -84,11 +84,18 @@ shaper_freq_y = 77.2
 [bltouch]
 sensor_pin: ^PC2
 control_pin: PA1
-x_offset: -45
-y_offset: 0
+pin_move_time: 0.675
+stow_on_each_sample: false
+probe_with_touch_mode: true
+pin_up_touch_mode_reports_triggered: false
+speed: 100
+lift_speed: 200
+samples: 1
+sample_retract_dist: 10
+samples_tolerance_retries: 4
+x_offset: 0
+y_offset: -9
 #z_offset: 0
-speed: 10.0
-pin_up_touch_mode_reports_triggered: False
 
 
 [bed_mesh]
@@ -96,7 +103,7 @@ speed: 100
 horizontal_move_z: 8
 mesh_min: 50, 50
 mesh_max: 300, 300
-probe_count: 3, 3
+probe_count: 5, 5
 
 [safe_z_home]
 speed: 100
@@ -158,7 +165,7 @@ position_endstop: 360
 uart_pin: PC11
 tx_pin: PC10
 uart_address: 0
-run_current: 0.45
+run_current: 0.68
 stealthchop_threshold: 999999
 #-------------------------------------
 # Stepper Z Creality 42-34, 0.8A peak RMS (per phase)
@@ -178,7 +185,7 @@ homing_speed: 10.0
 uart_pin: PC11
 tx_pin: PC10
 uart_address: 1
-run_current: 0.48
+run_current: 0.68
 stealthchop_threshold: 999999
 #-------------------------------------
 # Stepper Y Creality 42-48, 1.0A peak RMS (per phase)
@@ -201,7 +208,7 @@ uart_pin: PC11
 tx_pin: PC10
 diag_pin: PC1
 uart_address: 2
-run_current: 0.57
+run_current: 0.68
 stealthchop_threshold: 999999
 
 #-------------------------------------
@@ -328,16 +335,18 @@ gcode:
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [bltouch]
-#*# z_offset = 0.6250
+#*# z_offset = 0.600
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.696250, -0.517500, -0.587500
-#*# 	  -0.082500, -0.061250, -0.322500
-#*# 	  0.490000, 0.325000, -0.101250
-#*# x_count = 3
-#*# y_count = 3
+#*# 	  -0.765000, -0.621250, -0.522500, -0.458750, -0.485000
+#*# 	  -0.446250, -0.375000, -0.267500, -0.212500, -0.216250
+#*# 	  -0.133750, -0.036250, 0.060000, 0.053750, -0.031250
+#*# 	  0.033750, 0.127500, 0.210000, 0.228750, 0.188750
+#*# 	  0.187500, 0.293750, 0.393750, 0.413750, 0.328750
+#*# x_count = 5
+#*# y_count = 5
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
