--- a/printer.cfg
+++ b/printer.cfg
@@ -58,6 +58,9 @@ max_z_velocity: 10
 max_z_accel: 100
 square_corner_velocity: 5.0
 
+[force_move]
+enable_force_move: true
+
 [filament_switch_sensor filament_sensor]
 pause_on_runout: true
 switch_pin: PC15
@@ -93,8 +96,8 @@ lift_speed: 200
 samples: 1
 sample_retract_dist: 10
 samples_tolerance_retries: 4
-x_offset: 0
-y_offset: -9
+x_offset: -49.3
+y_offset: -8
 #z_offset: 0
 
 
@@ -167,6 +170,7 @@ tx_pin: PC10
 uart_address: 0
 run_current: 0.68
 stealthchop_threshold: 999999
+
 #-------------------------------------
 # Stepper Z Creality 42-34, 0.8A peak RMS (per phase)
 #-------------------------------------
@@ -187,6 +191,7 @@ tx_pin: PC10
 uart_address: 1
 run_current: 0.68
 stealthchop_threshold: 999999
+
 #-------------------------------------
 # Stepper Y Creality 42-48, 1.0A peak RMS (per phase)
 #-------------------------------------
@@ -200,8 +205,8 @@ rotation_distance: 40 # pitch 2mm, teeth 20
 microsteps: 16
 homing_speed: 100
 position_min: 0
-position_max: 350
-position_endstop: 350
+position_max: 355
+position_endstop: 355
 # ---------- Y 2209 ----------
 [tmc2209 stepper_y]
 uart_pin: PC11
@@ -212,31 +217,26 @@ run_current: 0.68
 stealthchop_threshold: 999999
 
 #-------------------------------------
-# Creality Sprite SE with Spider Ceramic Hotend
+# Creality 42-40 with Spider Ceramic Hotend
 #-------------------------------------
 [extruder]
 step_pin: PB3
-dir_pin: !PB4
+dir_pin: PB4
 enable_pin: !PD1
 microsteps: 16
-gear_ratio: 42:12
-rotation_distance: 26.359
+rotation_distance: 24.395
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: PC8
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PA0
-control: pid
-pid_Kp: 21.527
-pid_Ki: 1.063
-pid_Kd: 108.982
+#control: pid
+#pid_Kp: 21.527
+#pid_Ki: 1.063
+#pid_Kd: 108.982
 min_temp: 0
 max_temp: 305
-min_extrude_temp: 180
-max_extrude_only_velocity: 150.0
-max_extrude_only_accel: 4000.0
-pressure_advance_smooth_time: 0.075
-pressure_advance: 0.16
+
 # ---------- E Stepper ----------
 # Creality Sprite SE 0.8A peak 
 # -------------------------------
@@ -334,17 +334,14 @@ gcode:
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
-#*# [bltouch]
-#*# z_offset = 0.600
-#*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.765000, -0.621250, -0.522500, -0.458750, -0.485000
-#*# 	  -0.446250, -0.375000, -0.267500, -0.212500, -0.216250
-#*# 	  -0.133750, -0.036250, 0.060000, 0.053750, -0.031250
-#*# 	  0.033750, 0.127500, 0.210000, 0.228750, 0.188750
-#*# 	  0.187500, 0.293750, 0.393750, 0.413750, 0.328750
+#*# 	  -0.252500, -0.125000, -0.148750, -0.227500, -0.353750
+#*# 	  -0.256250, -0.118750, -0.116250, -0.160000, -0.306250
+#*# 	  -0.300000, -0.183750, -0.147500, -0.183750, -0.326250
+#*# 	  -0.270000, -0.147500, -0.106250, -0.155000, -0.282500
+#*# 	  -0.277500, -0.137500, -0.112500, -0.142500, -0.280000
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
@@ -355,3 +352,12 @@ gcode:
 #*# max_x = 300.0
 #*# min_y = 50.0
 #*# max_y = 300.0
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 34.273
+#*# pid_ki = 9.934
+#*# pid_kd = 29.560
+#*#
+#*# [bltouch]
+#*# z_offset = 1.550
